Wagon: Deploying site to repository

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ if (window.jstiming) window.jstiming.load.tick('headEnd');
     &lt;param name=&quot;responsibility&quot; value=&quot;Review&quot; /&gt;
     &lt;param name=&quot;namespace&quot;      value=&quot;KFS-TEM&quot; /&gt;
     &lt;param name=&quot;type&quot;           value=&quot;Document Type, Routing Node &amp; Action Information&quot; /&gt;
-&lt;/customChange&gt;</pre></div></div>
+&lt;/customChange&gt;</pre></div><div class="section"><h3>Checkout our <a class="externalLink" href="http://plus.google.com/101577324918122329049/">G+ Page</a><a name="Checkout_our_G_Page"></a></h3></div></div>
 </div>
 
 </div></div>			</div>
