--- a/usage.html
+++ b/usage.html
@@ -312,7 +312,7 @@ if (window.jstiming) window.jstiming.load.tick('headEnd');
      field-label-hidden'><div class='field-items'><div class='field-item
                                                        even'
                                                        property='content:encoded'>
-      <div class="section"><h2>Usage<a name="Usage"></a></h2></div><div class="section"><h2>Available Refactorings<a name="Available_Refactorings"></a></h2><div class="section"><h3><a href="#kns_refactorings">KNS Refactorings</a><a name="KNS_Refactorings"></a></h3></div><div class="section"><h3><a href="#kim_refactorings">KIM Refactorings</a><a name="KIM_Refactorings"></a></h3></div></div>
+      <div class="section"><h2>Usage<a name="Usage"></a></h2></div><div class="section"><h2>Available Refactorings<a name="Available_Refactorings"></a></h2><div class="section"><h3><a href="#kns_refactorings.html">KNS Refactorings</a><a name="KNS_Refactorings"></a></h3></div><div class="section"><h3><a href="#kim_refactorings.html">KIM Refactorings</a><a name="KIM_Refactorings"></a></h3></div></div>
 </div>
 
 </div></div>			</div>
