Wagon: Deploying site to repository

--- a/xref/overview-frame.html
+++ b/xref/overview-frame.html
@@ -16,6 +16,9 @@
 
 		<ul>
 						<li>
+				<a href="./package-frame.html" target="packageFrame">(default package)</a>
+			</li>
+						<li>
 				<a href="org/kuali/rice/liquibase/change/ext/package-frame.html" target="packageFrame">org.kuali.rice.liquibase.change.ext</a>
 			</li>
 						<li>
