--- a/xref/overview-summary.html
+++ b/xref/overview-summary.html
@@ -35,6 +35,11 @@
         	<tbody>
     	    	            	<tr>
               		<td>
+                		<a href="./package-summary.html">(default package)</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="org/kuali/rice/liquibase/change/ext/package-summary.html">org.kuali.rice.liquibase.change.ext</a>
               		</td>
             	</tr>
