--- a/kim_refactorings.html
+++ b/kim_refactorings.html
@@ -323,7 +323,7 @@ if (window.jstiming) window.jstiming.load.tick('headEnd');
     &lt;param name=&quot;responsibility&quot; value=&quot;Review&quot; /&gt;
     &lt;param name=&quot;namespace&quot;      value=&quot;KFS-TEM&quot; /&gt;
     &lt;param name=&quot;type&quot;           value=&quot;Document Type, Routing Node &amp; Action Information&quot; /&gt;
-&lt;/customChange&gt;</pre></div></div></div><div class="section"><h3>Create a Role<a name="Create_a_Role"></a></h3><div class="section"><h4>org.liquibase.change.ext.CreateRole<a name="org.liquibase.change.ext.CreateRole"></a></h4></div><div class="section"><h4>Description<a name="Description"></a></h4><p>Creates a new role</p></div><div class="section"><h4>Parameters<a name="Parameters"></a></h4></div><div class="section"><h4>Example<a name="Example"></a></h4><div class="source"><pre>&lt;customChange class=&quot;org.liquibase.change.ext.CreateResponsibility&quot;&gt;
+&lt;/customChange&gt;</pre></div></div></div><div class="section"><h3>Create a Role<a name="Create_a_Role"></a></h3><div class="section"><h4>org.liquibase.change.ext.CreateRole<a name="org.liquibase.change.ext.CreateRole"></a></h4></div><div class="section"><h4>Description<a name="Description"></a></h4><p>Creates a new role</p></div><div class="section"><h4>Parameters<a name="Parameters"></a></h4></div><div class="section"><h4>Example<a name="Example"></a></h4><div class="source"><pre>&lt;customChange class=&quot;org.liquibase.change.ext.CreateRole&quot;&gt;
     &lt;param name=&quot;lastUpdated&quot; /&gt;
     &lt;param name=&quot;namespace&quot; value=&quot;KFS-TEM&quot; /&gt;
     &lt;param name=&quot;type&quot;      value=&quot;Default&quot; /&gt;
